log and tracing, doco, stitching.